--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,4 +13,10 @@ dependencies:
   path: ^1.8.2  
   crypto: ^3.0.2
   image: ^4.0.10
+  async: ^2.10.0
+  json_annotation: ^4.7.0
+  freezed_annotation: ^2.2.0
 dev_dependencies:
+  build_runner: ^2.3.3
+  json_serializable: ^6.5.4
+  freezed: ^2.3.1
