--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   async: ^2.10.0
   json_annotation: ^4.7.0
   freezed_annotation: ^2.2.0
+  tuple: ^2.0.1
 dev_dependencies:
   build_runner: ^2.3.3
   json_serializable: ^6.5.4
