--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: dart_tools
+name: hitomi
 description: A sample command-line application.
 # version: 1.0.0
 # homepage: https://www.example.com
