--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   freezed_annotation: ^2.2.0
   tuple: ^2.0.1
   collection: ^1.17.1
+  sqlite3: ^1.9.1
+
 dev_dependencies:
   build_runner: ^2.3.3
   json_serializable: ^6.5.4
