--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"output":"/home/bai/ssd/photos","proxy":"127.0.0.1:8389","languages":["japanese","chinese"],"maxTasks":5,"exinclude":["novel","yaoi","males only","females only","yuri","artbook","sample","futanari"],"dateLimit":"2014-01-01"}
+{"output":"/home/bai/ssd/photos","proxy":"127.0.0.1:8389","languages":["japanese","chinese"],"maxTasks":5,"exinclude":["novel","yaoi","males only","females only","yuri","artbook","sample","futanari","extraneous ads","ai generated"],"dateLimit":"2014-01-01"}
