--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,8 +19,12 @@ dependencies:
   tuple: ^2.0.1
   collection: ^1.17.1
   sqlite3: ^1.9.1
-
+  shelf: ^1.1.0
+  shelf_router: ^1.0.0
+  shelf_static: ^1.0.0
 dev_dependencies:
+  http: ^1.0.0
+  lints: ^2.0.0
   build_runner: ^2.3.3
   json_serializable: ^6.5.4
   freezed: ^2.3.1
