--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   tuple: ^2.0.1
   collection: ^1.17.1
   sqlite3: ^1.9.1
+  dio: ^5.3.2
   shelf: ^1.1.0
   shelf_router: ^1.0.0
   shelf_static: ^1.0.0
