--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "output": "/home/bai/ssd/photos",
-    "proxy": "127.0.0.1:8389",
+    "proxy": "192.168.1.107:8389",
     "languages": [
         "japanese",
         "chinese"
@@ -16,6 +16,8 @@
         "sample",
         "futanari",
         "extraneous ads",
+        "guro",
+        "snuff",
         "ai generated"
     ],
     "dateLimit": "2014-01-01"
