--- a/config.json
+++ b/config.json
@@ -18,6 +18,8 @@
         "extraneous ads",
         "guro",
         "snuff",
+        "tentacles",
+        "corruption",
         "ai generated"
     ],
     "dateLimit": "2014-01-01"
