--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   shelf: ^1.1.0
   shelf_router: ^1.0.0
   shelf_static: ^1.0.0
+  uuid: ^4.3.1
+  dcache: ^0.4.0
 dev_dependencies:
   http: ^1.0.0
   lints: ^2.0.0
