--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   shelf_static: ^1.0.0
   uuid: ^4.3.1
   dcache: ^0.4.0
+  logger: ^2.0.2+1
 dev_dependencies:
   http: ^1.0.0
   lints: ^2.0.0
