--- a/config.json
+++ b/config.json
@@ -20,6 +20,8 @@
         "snuff",
         "tentacles",
         "ai generated",
+        "coprophagia",
+        "scat",
         "no penetration"
     ],
     "dateLimit": "2014-01-01"
