--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   uuid: ^4.3.1
   dcache: ^0.4.0
   logger: ^2.0.2+1
+  isolate_manager: ^4.1.5+1
+
 dev_dependencies:
   http: ^1.0.0
   lints: ^2.0.0
