--- a/config.json
+++ b/config.json
@@ -22,6 +22,10 @@
         "ai generated",
         "coprophagia",
         "scat",
+        "furry",
+        "insect",
+        "bestiality",
+        "human on furry",
         "no penetration"
     ],
     "dateLimit": "2014-01-01"
