--- a/config.json
+++ b/config.json
@@ -6,27 +6,27 @@
         "chinese"
     ],
     "maxTasks": 5,
-    "excludes": [
-        "novel",
-        "yaoi",
-        "males only",
-        "females only",
-        "yuri",
-        "artbook",
-        "sample",
-        "futanari",
-        "extraneous ads",
-        "guro",
-        "snuff",
-        "tentacles",
-        "ai generated",
-        "coprophagia",
-        "scat",
-        "furry",
-        "insect",
-        "bestiality",
-        "human on furry",
-        "no penetration"
-    ],
+    "excludes": {
+        "novel":true,
+        "yaoi":true,
+        "males only":true,
+        "extraneous ads":true,
+        "ai generated":true,
+        "artbook":true,
+        "sample":true,
+        "females only":false,
+        "yuri":false,
+        "futanari":false,
+        "guro":false,
+        "snuff":false,
+        "tentacles":false,
+        "coprophagia":false,
+        "scat":false,
+        "furry":false,
+        "insect":false,
+        "bestiality":false,
+        "human on furry":false,
+        "no penetration":false
+    },
     "dateLimit": "2014-01-01"
 }
