--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,19 +18,20 @@ dependencies:
   freezed_annotation: ^2.2.0
   tuple: ^2.0.1
   collection: ^1.17.1
-  sqlite3: ^1.9.1
-  dio: ^5.3.2
+  sqlite3: ^2.4.0
+  dio: ^5.4.1
   shelf: ^1.1.0
   shelf_router: ^1.0.0
   shelf_static: ^1.0.0
   uuid: ^4.3.1
   dcache: ^0.4.0
-  logger: ^2.0.2+1
+  logger: ^2.1.0
   isolate_manager: ^4.1.5+1
+  http: ^1.2.1
+
 
 dev_dependencies:
-  http: ^1.0.0
-  lints: ^2.0.0
+  lints: ^3.0.0
   build_runner: ^2.3.3
   json_serializable: ^6.5.4
   freezed: ^2.3.1
