--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   shelf: ^1.1.0
   shelf_router: ^1.0.0
   shelf_static: ^1.0.0
+  shelf_packages_handler:  ^3.0.2
   uuid: ^4.3.1
   dcache: ^0.4.0
   logger: ^2.1.0
