--- a/config.json
+++ b/config.json
@@ -1,32 +1,36 @@
 {
-    "output": "d:\\manga",
-    "proxy": "127.0.0.1:8389",
+    "output": "d:manga",
+    "maxTasks": 5,
     "languages": [
         "japanese",
         "chinese"
     ],
-    "maxTasks": 5,
-    "excludes": {
-        "novel":true,
-        "yaoi":true,
-        "males only":true,
-        "extraneous ads":true,
-        "ai generated":true,
-        "artbook":true,
-        "sample":true,
-        "females only":false,
-        "yuri":false,
-        "futanari":false,
-        "guro":false,
-        "snuff":false,
-        "tentacles":false,
-        "coprophagia":false,
-        "scat":false,
-        "furry":false,
-        "insect":false,
-        "bestiality":false,
-        "human on furry":false,
-        "no penetration":false
-    },
-    "dateLimit": "2014-01-01"
+    "proxy": "127.0.0.1:8389",
+    "excludes": [
+        "{\"type\":\"tag\",\"name\":\"novel\",\"weight\":1.0}",
+        "{\"type\":\"male\",\"name\":\"yaoi\",\"weight\":1.0}",
+        "{\"type\":\"male\",\"name\":\"males only\",\"weight\":1.0}",
+        "{\"type\":\"tag\",\"name\":\"extraneous ads\",\"weight\":1.0}",
+        "{\"type\":\"tag\",\"name\":\"ai generated\",\"weight\":1.0}",
+        "{\"type\":\"tag\",\"name\":\"artbook\",\"weight\":1.0}",
+        "{\"type\":\"tag\",\"name\":\"sample\",\"weight\":1.0}",
+        "{\"type\":\"female\",\"name\":\"females only\",\"weight\":0.25}",
+        "{\"type\":\"female\",\"name\":\"yuri\",\"weight\":0.25}",
+        "{\"type\":\"female\",\"name\":\"futanari\",\"weight\":0.25}",
+        "{\"type\":\"female\",\"name\":\"guro\",\"weight\":0.25}",
+        "{\"type\":\"female\",\"name\":\"snuff\",\"weight\":0.25}",
+        "{\"type\":\"female\",\"name\":\"tentacles\",\"weight\":0.25}",
+        "{\"type\":\"female\",\"name\":\"coprophagia\",\"weight\":0.25}",
+        "{\"type\":\"female\",\"name\":\"scat\",\"weight\":0.25}",
+        "{\"type\":\"female\",\"name\":\"furry\",\"weight\":0.25}",
+        "{\"type\":\"female\",\"name\":\"insect\",\"weight\":0.25}",
+        "{\"type\":\"female\",\"name\":\"bestiality\",\"weight\":0.25}",
+        "{\"type\":\"female\",\"name\":\"human on furry\",\"weight\":0.25}",
+        "{\"type\":\"tag\",\"name\":\"no penetration\",\"weight\":0.25}"
+    ],
+    "dateLimit": "1970-01-01",
+    "auth": "12345678",
+    "logLevel": "debug",
+    "logOutput": "",
+    "remoteHttp": "127.0.0.1:7890"
 }
