--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,26 +12,25 @@ dependencies:
   test: ^1.6.0
   path: ^1.9.0
   crypto: ^3.0.3
-  image: ^4.1.7
+  image: ^4.2.0
   async: ^2.11.0
   json_annotation: ^4.9.0
-  freezed_annotation: ^2.4.1
-  tuple: ^2.0.2
-  collection: ^1.18.0
-  sqlite3: ^2.4.2
-  dio: ^5.4.3+1
-  shelf: ^1.4.1
+  freezed_annotation: ^2.4.4
+  collection: ^1.19.0
+  sqlite3: ^2.4.4
+  dio: ^5.5.0+1
+  shelf: ^1.4.2
   shelf_router: ^1.1.4
   shelf_static: ^1.1.2
-  uuid: ^4.4.0
+  uuid: ^4.4.2
   dcache: ^0.4.0
-  logger: ^2.2.0
-  isolate_manager: ^5.0.2+1
-  http: ^1.2.1
+  logger: ^2.4.0
+  isolate_manager: ^5.1.0
+  http: ^1.2.2
 
 
 dev_dependencies:
   lints: ^4.0.0
   build_runner: ^2.4.1
   json_serializable: ^6.7.1
-  freezed: ^2.5.2
+  freezed: ^2.5.7
