--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   shelf: ^1.4.2
   shelf_router: ^1.1.4
   shelf_static: ^1.1.2
+  shelf_web_socket: ^2.0.0
   uuid: ^4.4.2
   dcache: ^0.4.0
   logger: ^2.4.0
