--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,14 +11,14 @@ dependencies:
   args: ^2.5.0
   test: ^1.6.0
   path: ^1.9.0
-  crypto: ^3.0.3
+  crypto: ^3.0.5
   image: ^4.2.0
   async: ^2.11.0
   json_annotation: ^4.9.0
   freezed_annotation: ^2.4.4
   collection: ^1.19.0
-  sqlite3: ^2.4.4
-  dio: ^5.5.0+1
+  sqlite3: ^2.4.6
+  dio: ^5.6.0
   shelf: ^1.4.2
   shelf_router: ^1.1.4
   shelf_static: ^1.1.2
@@ -26,12 +26,13 @@ dependencies:
   uuid: ^4.4.2
   dcache: ^0.4.0
   logger: ^2.4.0
-  isolate_manager: ^5.1.0
+  isolate_manager: ^5.2.1
   http: ^1.2.2
+  ml_linalg: ^13.12.6
 
 
 dev_dependencies:
   lints: ^4.0.0
-  build_runner: ^2.4.1
+  build_runner: ^2.4.10
   json_serializable: ^6.7.1
   freezed: ^2.5.7
