--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,33 +4,33 @@ version: 1.0.0
 homepage: https://github.com/baijunty/hitomi
 
 environment:
-  sdk: '>=3.5.0'
+  sdk: '>3.5.0'
 
 dependencies: 
   args: ^2.6.0
-  test: ^1.6.0
+  test: ^1.25.15
   path: ^1.9.1
   crypto: ^3.0.6
   image: ^4.5.2
-  async: ^2.12.0
+  async: ^2.13.0
   json_annotation: ^4.9.0
   freezed_annotation: ^2.4.4
   collection: ^1.19.1
-  sqlite3: ^2.5.0
-  dio: ^5.7.0
+  sqlite3: ^2.7.2
+  dio: ^5.8.0+1
   shelf: ^1.4.2
   shelf_router: ^1.1.4
   shelf_static: ^1.1.3
-  shelf_web_socket: ^2.0.1
+  shelf_web_socket: ^2.0.1 
   uuid: ^4.5.1
   dcache: ^0.4.0
   logger: ^2.5.0
-  isolate_manager: ^5.7.0+1
-  http: ^1.2.2
+  isolate_manager: ^5.7.2+1
+  http: ^1.3.0
   ml_linalg: ^13.12.6
 
 dev_dependencies:
-  lints: ^5.1.0
+  lints: ^5.1.1
   build_runner: ^2.4.14
-  json_serializable: ^6.9.2
+  json_serializable: ^6.9.3
   freezed: ^3.0.0-0.0.dev
