--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: hitomi
 description: A sample command-line application.
-version: 1.0.0
+version: 1.0.1
 homepage: https://github.com/baijunty/hitomi
 
 environment:
@@ -25,7 +25,7 @@ dependencies:
   uuid: ^4.5.1
   dcache: ^0.4.0
   logger: ^2.5.0
-  isolate_manager: ^5.7.2+1
+  isolate_manager: ^5.7.3
   http: ^1.3.0
   ml_linalg: ^13.12.6
 
