--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,16 +7,16 @@ environment:
   sdk: '>3.5.0'
 
 dependencies: 
-  args: ^2.6.0
+  args: ^2.7.0
   test: ^1.25.15
   path: ^1.9.1
   crypto: ^3.0.6
-  image: ^4.5.3
+  image: ^4.5.4
   async: ^2.13.0
   json_annotation: ^4.9.0
   freezed_annotation: ^3.0.0
   collection: ^1.19.1
-  sqlite3: ^2.7.4
+  sqlite3: ^2.7.5
   dio: ^5.8.0+1
   shelf: ^1.4.2
   shelf_router: ^1.1.4
@@ -25,7 +25,7 @@ dependencies:
   uuid: ^4.5.1
   dcache: ^0.4.0
   logger: ^2.5.0
-  isolate_manager: ^5.7.4
+  isolate_manager: ^5.7.5
   http: ^1.3.0
   ml_linalg: ^13.12.6
 
@@ -33,4 +33,4 @@ dev_dependencies:
   lints: ^5.1.1
   build_runner: ^2.4.15
   json_serializable: ^6.9.4
-  freezed: ^3.0.0-0.0.dev
+  freezed: ^3.0.4
