--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,12 +25,12 @@ dependencies:
   uuid: ^4.5.1
   dcache: ^0.4.0
   logger: ^2.5.0
-  isolate_manager: ^5.7.5
+  isolate_manager: ^6.0.0+2
   http: ^1.3.0
   ml_linalg: ^13.12.6
 
 dev_dependencies:
   lints: ^5.1.1
   build_runner: ^2.4.15
-  json_serializable: ^6.9.4
-  freezed: ^3.0.4
+  json_serializable: ^6.9.5
+  freezed: ^3.0.6
