--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,9 +14,9 @@ dependencies:
   image: ^4.5.4
   async: ^2.13.0
   json_annotation: ^4.9.0
-  freezed_annotation: ^3.0.0
+  freezed_annotation: ^3.1.0
   collection: ^1.19.1
-  sqlite3: ^2.7.6
+  sqlite3: ^2.7.7
   dio: ^5.8.0+1
   shelf: ^1.4.2
   shelf_router: ^1.1.4
@@ -25,12 +25,12 @@ dependencies:
   uuid: ^4.5.1
   dcache: ^0.4.0
   logger: ^2.6.0
-  isolate_manager: ^6.0.0+2
+  isolate_manager: ^6.0.1
   http: ^1.3.0
   ml_linalg: ^13.12.6
 
 dev_dependencies:
   lints: ^6.0.0
-  build_runner: ^2.5.4
-  json_serializable: ^6.9.5
-  freezed: ^3.0.6
+  build_runner: ^2.6.0
+  json_serializable: ^6.10.0
+  freezed: ^3.2.0
