--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,8 +16,8 @@ dependencies:
   json_annotation: ^4.9.0
   freezed_annotation: ^3.1.0
   collection: ^1.19.1
-  sqlite3: ^2.8.0
-  dio: ^5.8.0+1
+  sqlite3: ^2.9.0
+  dio: ^5.9.0
   shelf: ^1.4.2
   shelf_router: ^1.1.4
   shelf_static: ^1.1.3
@@ -25,12 +25,12 @@ dependencies:
   uuid: ^4.5.1
   dcache: ^0.4.0
   logger: ^2.6.1
-  isolate_manager: ^6.0.1
-  http: ^1.3.0
+  isolate_manager: ^6.1.0
+  http: ^1.5.0
   ml_linalg: ^13.12.6
 
 dev_dependencies:
   lints: ^6.0.0
-  build_runner: ^2.6.0
-  json_serializable: ^6.10.0
-  freezed: ^3.2.0
+  build_runner: ^2.8.0
+  json_serializable: ^6.11.1
+  freezed: ^3.2.3
