--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   isolate_manager: ^6.1.2
   http: ^1.5.0
   ml_linalg: ^13.12.6
+  archive: ^4.0.7
 
 dev_dependencies:
   lints: ^6.0.0
